change swagger setting
